--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <h1>Byggnader</h1>
-<p>Den här appen är riktad mot er som tycker om höga byggnader.</p>
-<p>I den här appen så har det tagits med några objekt samt tillhörande fakta till dem.</p>
+<p>Den här appen är riktad mot er som tycker om ikoniska byggnader.</p>
+<p>I den här appen så har det tagits med några välkända ikoniska byggnader
+    samt tillhörande fakta till dem.</p>
 </body>
 </html>
